Zweiter Teil Kalibrierung

--- a/Weitwinkel_Compton/Protokoll/bibliography.bib
+++ b/Weitwinkel_Compton/Protokoll/bibliography.bib
@@ -1,6 +1,6 @@
 @misc{HPGe-Detektor,
   year = {2021},
-  title = {Principle of Operation of HPGe Detectorss},
+  title = {Principle of Operation of HPGe Detectors},
   howpublished = {\url{https://www.nuclear-power.com/nuclear-engineering/radiation-detection/semiconductor-detectors/high-purity-germanium-detectors-hpge/principle-of-operation-of-hpge-detectors/}}
   }
 
@@ -12,4 +12,29 @@
   volume={},
   number={},
   pages={580-586},
-  doi={10.1109/NSSMIC.2010.5873827}}
+  doi={10.1109/NSSMIC.2010.5873827}
+  }
+
+@misc{Bild_Compton_Streuung,
+  author = {EoD},
+  year = {2021},
+  title = {Schematik Compton-Streuung},
+  note = {CC BY-SA 3.0},
+  howpublished = {\url{https://commons.wikimedia.org/w/index.php?curid=1349742}}
+  }
+
+@misc{Bild_Photomultiplier,
+  author = {Jkrieger},
+  year = {2007},
+  title = {Schematik Photomultiplier},
+  note = {Wikimedia Commons},
+  howpublished = {\url{https://commons.wikimedia.org/wiki/File:Photomultiplier_schema_de.png}}
+  }
+
+@misc{Fit_bivariate,
+  author = {Mikko Pitkänen},
+  year = {2019},
+  title = {Implementierung York-Fitting},
+  note = {Auf Github},
+  howpublished = {\url{https://gist.github.com/mikkopitkanen/ce9cd22645a9e93b6ca48ba32a3c85d0}}
+  }
