--- a/Weitwinkel_Compton/Protokoll/main.tex
+++ b/Weitwinkel_Compton/Protokoll/main.tex
@@ -81,6 +81,8 @@ Betreuer: & \betreuer\end{tabular}}
 
 \include{einfuehrung.tex}
 \include{theorie.tex}
+\include{kalibrierung.tex}
+\include{kalibrierung_szintillator.tex}
 
 \nocite{*} % alle resourcen auflisten
 \printbibliography
