--- a/Weitwinkel_Compton/Protokoll/einfuehrung.tex
+++ b/Weitwinkel_Compton/Protokoll/einfuehrung.tex
@@ -2,6 +2,7 @@
 In diesem Praktikumsversuch soll ein Photonendetektor mittels Weitwinkel-Compton-Koinzidenz-Methode (WCKM) kalibriert werden.
 Die WCKM ist eine Methode zur Energiekalibrierung von vor allem organischen Szintillatoren. Da organische Szintillatoren Atome mit niedrigen Kernladungszahlen (Niedrig-Z-Szintillatoren) verwenden kann keine Kalibrierung mittels Bestimmung des Vollenergiepeaks stattfinden, denn für die typischerweise verwendeten Kalibrierenergien (\SI{0.5}{\mega\electronvolt} bis \SI{1.5}{\mega\electronvolt}) überwiegt bei niedrigem Z die Compton-Streuung gegenüber dem Photoeffekt.
 Für den Versuch wird außerdem ein HPGe-Detektor kalibriert um den Detektor auf Basis des organischen Szintillators mit diesem zu vergleichen. Der HPGe-Detektor kann aufgrund seiner höheren Kernladungszahl mittels Vollenergiepeakanalyse kalibriert werden.
+Der Versuch wird mithilfe eines Roboterarms als Probenhalter ausgeführt was das anfahren von präzisen Koordinaten ermöglicht und zusätzlichen Strahlenschutz gewährleistet.
 
 Die zu bearbeitenden Aufgaben sind konkret:
 \begin{enumerate}
