--- a/Weitwinkel_Compton/Protokoll/bibliography.bib
+++ b/Weitwinkel_Compton/Protokoll/bibliography.bib
@@ -38,3 +38,10 @@
   note = {Auf Github},
   howpublished = {\url{https://gist.github.com/mikkopitkanen/ce9cd22645a9e93b6ca48ba32a3c85d0}}
   }
+
+@misc{IAEA,
+  author = {International Atomic Energy Agency},
+  year = {2021},
+  title = {Live Cahrt of Nuclides},
+  howpublished = {\url{https://www-nds.iaea.org/relnsd/vcharthtml/VChartHTML.html}}
+  }
