--- a/Weitwinkel_Compton/Protokoll/kalibrierung.tex
+++ b/Weitwinkel_Compton/Protokoll/kalibrierung.tex
@@ -10,7 +10,7 @@ Wie in Abb. \ref{NaGe} und \ref{NaSzin} zu sehen ist, war die Aktivität der $^{
 Im Ge-Spektrum lässt sich prinzipiel ein stark ausgeprägter Peak, zwischen den Kanälen 500 und 600, erkennen, das Compton-Kontinuum ist jedoch recht verschwommen.
 Das Szintillator-Spektrum wiederrum scheint hier unbrauchbar.
 Es lässt sich nur ungefähr der Bereich des Comtpon-Kontinuums erahnen.
-Eine kalbrierung mithilfe dieser Probe sollte nur schwer möglich sein, da für den Ge-Detektor mehrere Peaks notwendig wären und das Szintillator-Spektrum einfach zu schwach ausgeprägt ist.
+Eine Kalibrierung mithilfe dieser Probe sollte nur schwer möglich sein, da für den Ge-Detektor mehrere Peaks notwendig wären und das Szintillator-Spektrum einfach zu schwach ausgeprägt ist.
 Prinzipiell könnten die Spektren mit einer längeren Messzeit verbessert werden,in diesem Versuch standen jedoch mehrere Proben zur Auswahl, weshalb dies nicht gemacht wurde.
 
 \begin{figure}[h]
@@ -30,9 +30,9 @@ Die $^{133}$Ba Probe besaß eine im Vergleich dazu deutlich stärkere Aktivität
 Im Spektrum des Ge-Detektors lassen sich jetzt mehrere Peaks deutlich erkennen.
 Eine Kalibirierung anhand dieser sollte jetzt möglich sein.
 Das Szintillator Spektrum dieser Probe wird, wie  zu erwarten war, vom Compton-Kontinuum dominiert.
-Die Compton-Kante ist hierbei schwach ausgeprägt, was eine herkömliche Kalbirierung, wieder wie zu erwarten, erschweren würde.
+Die Compton-Kante ist hierbei schwach ausgeprägt, was eine herkömliche Kalibrierung, wieder wie zu erwarten, erschweren würde.
 Eine längere Messzeit oder Beseitigung der Untergrundstrahlung, würde hier jedoch möglicherweise aushelfen können.
-Aufällig ist außerdem ein recht stark ausgeprägter Peak im niedrigenergetischen Bereich (ungefähr bei Kanal 50).
+Aufällig ist außerdem ein recht stark ausgeprägter Peak im niederenergetischen Bereich (ungefähr bei Kanal 50).
 Hierbei könnte es sich um einen stark ausgeprägten Rückstreupeak handeln.
 Aufgrund der besseren Spektren, wird im folgenden die $^{133}$Ba Probe genutzt.
 
@@ -53,13 +53,13 @@ Aufgrund der besseren Spektren, wird im folgenden die $^{133}$Ba Probe genutzt.
 
 Ausgehend vom aufgenommenen Spektrum wird im folgenden eine Energiekalibrierung des Ge-Detektors mitels einer Vollenergiepeak-Analyse durchgeführt.
 Dafür ist es als erstes notwendig die sichtbaren Peaks zu identifizieren.
-Dies wurde durch vergleiche mit bekannten Nuklid-Karten (Quelle iaea einfügen) realisiert.
+Dies wurde durch Vergleiche mit bekannten Nuklid-Karten (z.B. \cite{IAEA}) realisiert.
 Die Ergebnisse sind in Abb. \ref{GeKali} zu sehen.
-Eine Identifikation der Peaks, mit den zu häufigsten Gammazerfällen von $^{133}$Ba war möglich.
-Zusätzlich zu diesen, fällt jedoch ein weiterer Peak, mit relativ geringer Intensität, um Kanal 480 herum auf.
-Ein entsprechender Gammazerfall von $^{133}$Ba ist nicht in (Quelle iaea einfügen) zu finden.
+Eine Identifikation der Peaks mittels der häufigsten Gammazerfälle von $^{133}$Ba war möglich.
+Zusätzlich zu diesen fällt jedoch ein weiterer Peak mit relativ geringer Intensität um Kanal 480 herum auf.
+Ein entsprechender Gammazerfall von $^{133}$Ba ist nicht in \cite{IAEA} zu finden.
 Daher sollte es sich hier um Untergrundstrahlung von einem natürlichen Nuklid handeln.
-Eine identifkation von diesem könnte erfolgen, aufgrund der relativ geringen Intensität und der foldendermaßen hohen statistischen Ungenauigkeit, wurde dies jedoch nicht getan und der Peak nicht für die kalibrierung genutzt.
+Eine Identifkation von diesem könnte erfolgen, aufgrund der relativ geringen Intensität und der foldendermaßen hohen statistischen Ungenauigkeit wurde dies jedoch nicht getan und der Peak nicht für die Kalibrierung genutzt.
 
 \begin{figure}[h]
   \includegraphics[width=\linewidth]{images/ba133Kali.png}
@@ -67,9 +67,9 @@ Eine identifkation von diesem könnte erfolgen, aufgrund der relativ geringen In
   \label{GeKali}
 \end{figure}
 
-Die entsprechenden Peaks wurden mit einer Gaussfunktion entsprechend
+Die entsprechenden Peaks wurden mit einer Gaussfunktionen entsprechend
 \begin{equation}
-N(K) = a \cdot exp \left( - \frac{(K - K_{0}^{2}}{2 \sigma ^{2}} \right)
+N(K) = a \cdot \exp \left( - \frac{(K - K_{0})^{2}}{2 \sigma ^{2}} \right)
 \end{equation}
 
 
@@ -95,12 +95,12 @@ $E_{\gamma}$ [\si{\kilo\electronvolt}]  & $\mu$ & $\sigma$ \\
 \label{peaks}
 \end{table}
 
-Aus den Mittelwerten wird der Kanal, welcher mit der Zerfallsenergie korrespondiert, bestimmt, indem der Mittelwert ($\mu$) zur nächsten natürlichen Zahl K gerundet wird.
-Als Maß für die Unsicherheit der Energiebestimmung, wird die mittlere Halbwertsbreite (FWHM), ebenfalls auf natürliche Zahlen gerundet, genutzt.
-Diese ist defininiert, als Breite der Gaussfunktion bei halber Höhe und dient uns als Unsicherheit der Energiebestimmung.
+Aus den Mittelwerten wird der Kanal welcher mit der Zerfallsenergie korrespondiert bestimmt, indem der Mittelwert ($\mu$) zur nächsten natürlichen Zahl K gerundet wird.
+Als Maß für die Unsicherheit der Energiebestimmung wird die mittlere Halbwertsbreite (FWHM), ebenfalls auf natürliche Zahlen gerundet, genutzt.
+Diese ist defininiert als Breite der Gaussfunktion bei halber Höhe und dient uns als Unsicherheit der Energiebestimmung.
 Sie berechnet sich aus der Standardabweichung ($\sigma$) mit:
 \begin{equation}
-FWHM = 2 \sqrt{2 ln2} \sigma
+\text{FWHM} = 2 \sqrt{2 ln2} \sigma
 \end{equation}
 
 Die Ergebnisse sind in Tab. \ref{kanal} zusammengefasst.
@@ -122,7 +122,7 @@ $E_{\gamma}$ [\si{\kilo\electronvolt}]  & $K_{\gamma}$ & FWHM \\
 \label{kanal}
 \end{table}
 
-Mit Kentnis der Fünf Energiepeaks sowie der korrespondierenden Kanäle ist jetzt die Bestimmung einer Kalibriergerade des Ge-Detektors möglich.
+Mit Kentnis der fünf Energiepeaks sowie der korrespondierenden Kanäle ist jetzt die Bestimmung einer Kalibriergerade des Ge-Detektors möglich.
 Dafür wurden die Energien über die Kanäle geplottet und eine lineare Regression vorgenommen.
 Das Ergebnis dieser ist in \ref{Gegerade} zu sehen.
 Als Regressionsparameter ergaben sich ein Anstieg von: $n = 0.924 \pm 0.002$ sowie ein Schnittpunkt von $m = -1.1 \pm 0.7$.
