--- a/Weitwinkel_Compton/Protokoll/kalibrierung_szintillator.tex
+++ b/Weitwinkel_Compton/Protokoll/kalibrierung_szintillator.tex
@@ -38,7 +38,7 @@ Für die Kalibrierung wurden die diagonalen, linearen Bereiche gefittet und dann
 \begin{figure}[ht]
 	\centering
     \includegraphics[width=0.98\textwidth]{images/kali_szint_fit_Na22.png}
-	\caption{Beispiel für die verwendete Prozedur der linearen Regression für Nutzung einer $^{22}$Na Probe. die Zuerst wurde der grobe Bereich des linearen Zusammenhangs ausgeschnitten. Danach wurde eine lineare Regression der Daten durchgeführt. Zuletzt wurden zwei Geraden äquidistant und parallel zur Regressionsgeraden verschoben bis $ 68 \% $ ($1 \sigma$) aller Punkte des ausgeschnittenen Bereichs innerhalb dieser Geraden liegen. Die Schnittpunkte dieser Geraden mit der y-Achse stellen unsere Messunsicherheit dar.}
+	\caption{Beispiel für die verwendete Prozedur der linearen Regression für Nutzung einer $^{22}$Na Probe. Zuerst wurde der grobe Bereich des linearen Zusammenhangs ausgeschnitten. Danach wurde eine lineare Regression der Daten durchgeführt. Zuletzt wurden zwei Geraden äquidistant und parallel zur Regressionsgeraden verschoben bis $ 68 \% $ ($1 \sigma$) aller Punkte des ausgeschnittenen Bereichs innerhalb dieser Geraden liegen. Die Schnittpunkte dieser Geraden mit der y-Achse stellen unsere Messunsicherheit dar.}
 	\label{kali_szint_bsp_fit}
 \end{figure}
 
