Es fehlen noch ssd und top

--- a/FPGA/Protokoll/main.tex
+++ b/FPGA/Protokoll/main.tex
@@ -84,10 +84,12 @@ Betreuer: & \betreuer\end{tabular}}
     showstringspaces=false,
     showtabs=false,
     keepspaces,
-    breaklines=true
-    commentstyle=\color{OliveGreen},
-    keywordstyle=\color{blue},
-    identifierstyle=\color{black}
+    breaklines=true,
+    aboveskip=10pt,
+    belowskip=10pt,
+    commentstyle=\color{ForestGreen},
+    keywordstyle=\color{ProcessBlue},
+    identifierstyle=\color{Black}
 }
 
 \renewcommand\lstlistingname{Quelltext} % Change language of section name
