Vervollständigung workshop, fixes, bin aber nicht gut in Grammatik. Danke für hochladen der Bilder.

--- a/FPGA/Protokoll/main.tex
+++ b/FPGA/Protokoll/main.tex
@@ -104,6 +104,7 @@ Betreuer: & \betreuer\end{tabular}}
 
 % ----- DOKUMENT ANFANG -----
 
+\input{Einleitung+Theorie.tex}
 \input{workshop.tex}
 
 \nocite{*} % alle resourcen auflisten
