--- a/FPGA/Protokoll/workshop.tex
+++ b/FPGA/Protokoll/workshop.tex
@@ -1,5 +1,9 @@
 \section{Workshop}
 In dem Workshop haben wir gelernt wie man VHDL schreibt, wie man VHDL-Dateien simuliert und synthetisiert und wie man synthetisierte Dateien auf einen Hardware FPGA überträgt.
+Zu beachten ist dabei, dass wir selbst immer nur einen Teil der VHDL-Dateien ergänzt haben um im Praktikum Zeit zu sparen.
+Es sei nochmal darauf hingewiesen das ein FPGA von sich aus nicht sequentiell arbeitet.
+Einige Formulierungen von Verarbeitungsabläufen könnten als zeitliche Abfolge fehlinterpretiert werden.
+Dies ist jedoch nur der Fall wenn dies explizit erwähnt wird.
 
 \subsection{Beispiel - NAND-Gatter}
 Das erste Beispiel das wir uns angeschaut haben ist ein NAND-Gatter.
@@ -65,18 +69,19 @@ Ein Bild von einer beispielhaften Schalterstellung ist in Abb. \ref{photo_gates}
 \begin{figure}[ht]
 	\centering
     \includegraphics[width=0.98\textwidth]{../Daten/Photo_FPGA_gates.png}
-	\caption{Photo des FPGA mit aufgespielter synthetisierter Verknüpfung von gates.vhd in beispielhafter Schalterstellung. Da nur Schalter $0$ und $2$ an (und der Knopf nicht gedrückt) sind sollten LED $1$ und $2$ an sein, und sie sind es.}
+	\caption{Photo des FPGA mit aufgespielter, synthetisierter Verknüpfung von gates.vhd in beispielhafter Schalterstellung. Da nur Schalter $0$ und $2$ an (und der Knopf nicht gedrückt) sind sollten LED $1$ und $2$ an sein, und sie sind es.}
 	\label{photo_gates}
 \end{figure}
 
-\subsection{Modul 1 - \textit{LoHi Detect}}
+\subsection{Modul 1 - \textit{LoHi detect}}
 
 Ab hier wurde an dem Projekt für die Datenverarbeitung am ATLAS Kalorimeter gearbeitet.
 In solchen Anwendungen wird üblicherweise mit einer \textit{Clock}, einem Taktsignal gearbeitet.
+Die Clock ermöglicht es der Datenverarbeitung nun auch eine Zeitdimension (neben Signallaufzeiten im FPGA) zu geben.
 Da wir hier mit vorgefertigten Daten arbeiten müssen wir ein Startsignal zum Senden der Daten von außerhalb (vom PC) geben.
 Dafür verwenden wir einen Knopf.
 Um das Senden der Daten nur einmal und in definierter Weise auszulösen müssen wir den Knopfdruck an die Clock koppeln.
-Dafür ist das Modul \textit{LoHi Detect} zuständig.
+Dafür ist das Modul \textit{LoHi detect} zuständig.
 Die Aufgabe bestand darin das ausgehende Signal (sig\_o) dann auf $1$ zu setzen wenn zu einer steigenden Flanke der Clock der Knopf gedrück ist, zur wiederum nächsten steigenden Flanke der Clock sollte es jedoch wieder auf $0$ gesetzt werden.
 Im Folgenden ist der Code dieses Moduls zu sehen:
 
@@ -106,9 +111,9 @@ In Abb. \ref{img_lohi_detect} wurde dieses Modul simuliert.
 Man sieht das nach Betätigung des Knopfes zur nächsten steigenden Flanke der Clock der Ausgang einen Zyklus lang auf $1$ steht.
 Als der Knopf losgelassen wird und das Eingangssignal wieder auf $0$ fällt wird zur nächsten steigenden Flanke der Clock auch das interne Signal reg zurückgesetzt.
 
-\subsection{Modul 2 - \textit{Max Find}}
+\subsection{Modul 2 - \textit{Max find}}
 
-Die Aufgabe des Moduls \textit{Max Find} ist es das Maximum einer Folge von Daten zu bestimmen.
+Die Aufgabe des Moduls \textit{Max find} ist es das Maximum einer Folge von Daten zu bestimmen.
 Die Konvention ist, dass zu jeder steigenden Flanke der Clock ein neuer Eingangswert (nächstes Folgenglied) vorliegt.
 VHDL hat eine Implementierung verschiedener Datentypen die wir hier verwenden.
 Diese sind in der Bibliothek IEEE.numeric\_std zu finden die jetzt mit eingebunden wird:
@@ -249,3 +254,93 @@ Dies wurde auch durch synthetisieren und aufspielen des Moduls auf den FPGA übe
 Leider haben wir dafür kein Bild, es sei aber versichert, dass alles wie gewünscht geklappt hat.
 
 \subsection{Modul 4 - \textit{ssd}}
+Die Werte die Dargestellt werden sollen sind vierstellig.
+Daher ist es notwendig die Stellen zu trennen und einzeln darzustellen.
+Das ist die Aufgabe des Moduls \textit{ssd} (seven-segment-display). Der Code dieses Moduls ist im Folgenden gegeben:
+
+\lstinputlisting[firstline = 12]{../Daten/ssd/ssd.vhd}
+
+Die vier Ausgangssignale sind ss\_d1\_o bis ss\_d4\_o welche jeweils die LEDs der 7-Segment-Anzeigen repräsentieren.
+Um die Funktionalität dieses Moduls zu implementieren wurde in der \textbf{architecture} der Befehl \textbf{generate} verwendet.
+Dieser ermöglicht es einen Code-Baustein leicht abgewandelt zu duplizieren (wird vom Compiler durchgeführt).
+Er wird hier verwendet um alle 7-Segment-Anzeigen auf einmal zu behandeln.
+Zuerst werden die Dezimalstellen in Zeile $45$ voneinander getrennt und im internen Signal quotient gespeichert.
+Wir nehmen zum besseren Verständnis die Zahl $1234$ als Beispiel und wollen uns ansehen wie die zweite Dezimalstelle von links, also die $2$, herausgetrennt wird.
+Dafür wird das Eingangssignal in einen integer umgewandelt, da für diesen Datentyp die algebraischen Operationen Division und Modulo implementiert sind.
+Dann wird durch eine Zehnerpotenz geteilt, sodass die Dezimalstelle von Interesse gerade die Stelle links vom Komma ist.
+Der nicht-ganzzahlige Anteil wird dabei automatisch abgeschnitten.
+Für unser Beispiel wird also durch $100$ geteilt und es bleibt $12$.
+Weiterhin werden größere Dezimalstellen abgetrennt durch das Modulo $10$.
+In unserem Beispiel bleibt damit $2$ übrig und wir haben die richtige Dezimalstelle isoliert.
+Zuletzt wird wieder in einen signed mit $5$ bit umgewandelt um über das Modul \textit{single\_disp} die entsprechenden LED-Ansteuerungen herauszusuchen.
+Das Heraussuchen wird in den Zeilen $47$ bis $54$ implementiert, wieder durch verwenden eines mappings.
+In den Zeilen $58$ bis $61$ werden dann die finalen Verknüpfungen zum Ausgangssignal vorgenommen.
+
+\begin{figure}[ht]
+	\centering
+    \includegraphics[width=0.98\textwidth]{../Daten/ssd.png}
+	\caption{Simulation von ssd.vhd}
+	\label{img_ssd}
+\end{figure}
+
+Auch dieses Modul wurde natürlich simuliert, zu sehen in Abb. \ref{img_ssd}.
+Das Trennen der Dezimalstellen hat offenbar funktioniert.
+Es ist zu erkennen, dass die ausgegebenen Signale gerade den erwarteten entsprechen (vergleich mit dem vorherigen Modul).
+Bei Änderung der anzuzeigenden Zahlen folgt die Darstellung noch im selben Takt.
+
+\subsection{Modul 5 - \textit{top}}
+
+In diesem letzten Modul werden die anderen vier Module zusammengefasst.
+Damit erhält man die gesamte Funktionalität des Filters, der auf Knopfdruck Daten empfängt, den Wiener Filter anwendet, das Maximum bestimmt und dieses dann anzeigt.
+Im Folgenden ist der Code des Moduls zu sehen:
+
+\lstinputlisting[firstline = 10]{../Daten/top/top.vhd}
+
+Zuerst sehen wir uns die \textbf{port}s der \textbf{entity} \textit{top} an.
+Wir nutzen eine Clock (Zeile $16$), haben einen Button der die Datenaufnahme startet (Zeile $18$), einen Button der das Modul zurücksetzt (Zeile $19$), eine Statusleuchte (Zeile $21$) und die Vier 7-Segment-Anzeigen (Zeilen $23$ bis $26$).
+Die Signale in den Zeilen $28$ und $29$ sind für die Kommunikation mit dem PC um die Eingangssignale zu empfangen.
+
+Sehen wir uns nun die \textbf{architecture} an.
+Für die Kommunikation zwischen den Modulen müssen wir interne Signale anlegen (Zeilen $37$ bis $40$).
+Diese halten die Ergebnisse nach jeder Datenverarbeitung in den Modulen.
+Die Module werden eingebunden indem sie instanziiert werden und dann ein mapping angelegt wird.
+Zuerst wurde das Modul für das empfangen der Daten vom PC eingebunden (ab Zeile $45$).
+Dieses werden wir uns nicht näher anschauen da es für die Funktion des eigentlichen Filters kaum von Bedeutung ist.
+Es sei nur darauf hingewiesen, dass in Zeile $66$ die eingehenden Daten auf das Signal data\_raw geschalten werden.
+Als nächstes wurde unser Modul \textit{LoHi detect} eingebunden (Zeilen $69$ bis $74$).
+Es macht aus dem Knopfdruck das definiertes Startsignal start.
+Dann wurde das Modul \textit{filter} eingebunden (Zeilen $76$ bis $84$).
+Dort werden die rohen Eingangsdaten wie beschrieben gefiltert und dann in das Signal data\_filtered geschrieben.
+Weiter geht es mit dem Modul \textit{Max find} um sequentiell das Maximum der gefilterten Daten zu finden (Zeilen $86$ bis $95$).
+Das Maximum der gefilterten Daten wird in dem Signal data\_max gespeichert.
+Zuletzt wird das Maximum mit dem Modul \textit{ssd} auf den vier 7-Segment-Anzeigen angezeigt (Zeilen $97$ bis $110$).
+Damit ist das Modul top vollständig.
+
+\begin{figure}[ht]
+	\centering
+    \includegraphics[width=0.98\textwidth]{../Daten/top.png}
+	\caption{Simulation von top.vhd}
+	\label{img_top}
+\end{figure}
+
+Auch dieses letzte Modul wurde zunächst simuliert, zu sehen in Abb. \ref{img_top}.
+Man erkennt, dass die Module wie geplant miteinander funktionieren.
+Der Knopfdruck wird in ein definiertes Startsignal umgewandelt, zur nächsten steigenden Flanke der Clock werden Daten empfangen.
+Nach einem weiteren Zyklus sind die ersten Daten aus dem Filter berechnet.
+Negative Zahlen werden beim finden des Maximums ignoriert (bzw. $0$ ist größer als die negativen Werte und wird daher beibehalten).
+Das Maximum $7049$ wird bald erkannt und sofort für die 7-Segment-Anzeigen übersetzt.
+
+Damit blieb nur noch das Modul \textit{top} in der Praxis zu testen.
+Daher wurde das Modul synthetisiert und dem FPGA aufgespielt.
+
+\begin{figure}[ht]
+	\centering
+    \includegraphics[width=0.98\textwidth]{../Daten/Photo_FPGA_top.png}
+	\caption{Photo des FPGA mit aufgespielter, synthetisierter Verknüpfung von top.vhd.}
+	\label{photo_top}
+\end{figure}
+
+Das Ergebnis kurz nach drücken des Startknopfes ist in Abb. \ref{photo_top} zu sehen.
+Hier ist zu erwähnen das der FPGA sich etwas eigenartig verhalten hat; es war nicht sofort klar welcher Knopf der Start- und welcher der Rücksetzknopf ist.
+In jedem Falle sah es für uns so aus als hätte der Test soweit funktioniert.
+Ob die $2457$ tatsächlich das richtige Maximum nach anwenden des Filters ist können wir nicht sagen, da wir die eingehenden Daten nicht kennen.
